--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -210,6 +210,29 @@ body {
             display: none;
           }
         }
+
+        &:disabled {
+          opacity: 0.4;
+          border-color: #787878;
+
+          &:active {
+            transform: none;
+          }
+
+          &:hover {
+            background-color: transparent;
+            cursor: default;
+
+            svg path {
+              cursor: default;
+              fill: #787878
+            }
+          }
+
+          svg path {
+            fill: #787878
+          }
+        }
       }
 
       b {
